# wasm-bindgen-spawn

./: .gitignore  Cargo.toml  LICENSE  README.md  Taskfile.yml  package-lock.json  pnpm-lock.yaml
.cargo/: config.toml
.github/workflows/: build.yml  check.yml
docs/: blog.md  index.html  index.md
docs/assets/: index-BaDIgjIB.css  index-C5oNPqUv.js
example/: .gitignore  .prettierignore  Cargo.toml  README.md  Taskfile.yml  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json
example/.cargo/: config.toml
example/public/: worker.js
example/src/: index.css  lib.rs  main.tsx  vite-env.d.ts
src/: lib.rs
src/js/: createDispatcher.js  createDispatcher.min.js  createDispatcher.min.js.txtpp  createDispatcher.txtpp.js  dispatcher.js  dispatcher.min.js.txtpp  worker.js  worker.min.js.txtpp
