[package]
name = "wasm-bindgen-spawn"
version = "0.0.2"
edition = "2024"
description = "Web Worker Multithreading library for wasm-bindgen the uses shared memory"
repository = "https://github.com/Pistonite/wasm-bindgen-spawn"
license = "MIT"
authors = ["Pistonight <pistonknight@outlook.com>"]
keywords = ["WASM", "threads", "atomics", "wasm-bindgen", "shared-memory"]
categories = ["web-programming", "wasm"]
include = [
    "/.cargo/config.toml",
    "/.gitignore",
    "src/js/createDispatcher.min.js",
    "src/**/*.rs",
    "Cargo.toml",
    "/LICENSE",
    "/README.md",
    "/rust-toolchain",
]

[dependencies]
js-sys = "0.3.77"
oneshot = { version = "0.1.11", default-features = false, features = ["std"] }
static_assertions = "1.1.0"
thiserror = "2.0.12"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = { version = "0.4.50", optional = true }

[features]
default = ["async"]
async = ["wasm-bindgen-futures"]
